hphp/test/zend/good/tests/classes/interface_method_final.php.expectf

Fatal error: Class if_a contains an abstract method and must therefore be declared abstract in %s/interface_method_final.php on line 3
